--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="errorColor">#DB080F</color>
     <color name="faded">#E4E0E0</color>
     <color name="backgroundApp">#0C0C0C</color>
-    <color name="homeTabs">#9CBED8</color>
+    <color name="homeTabs">#FCFAF6F6</color>
 </resources>
