--- a/app/src/main/res/layout/activity_latest.xml
+++ b/app/src/main/res/layout/activity_latest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/backgroundApp"
+    android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,12 +17,15 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:gravity="center_horizontal" />
+
     <TextView
         android:id="@+id/error"
-        android:textColor="@color/green"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textAlignment="center"
+        android:layout_marginTop="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" />
+
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
