--- a/app/src/main/res/layout/all_match.xml
+++ b/app/src/main/res/layout/all_match.xml
@@ -170,15 +170,31 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
-    <TextView
-        android:id="@+id/correct"
-        android:text="@string/pick_away_2_74"
-        android:textColor="@color/vip_status"
-        android:textStyle="bold"
-        android:textSize="13sp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginStart="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/correct"
+            android:text="@string/pick_away_2_74"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:layout_marginBottom="2dp"
+            android:layout_marginStart="10dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp" />
+
+        <TextView
+            android:id="@+id/score"
+            android:text="Score: 2-0"
+            android:textAlignment="textEnd"
+            android:layout_marginRight="35dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginEnd="40dp" />
+    </LinearLayout>
 </LinearLayout>
