--- a/app/src/main/res/layout/launcher_screen.xml
+++ b/app/src/main/res/layout/launcher_screen.xml
@@ -9,8 +9,9 @@
     <TextView
         android:id="@+id/app_name"
         android:gravity="center"
-        android:textSize="35sp"
-        android:text="Top-Tier Odds"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:text="@string/toptier_odds"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
