--- a/app/src/main/res/layout/activity_free_tips.xml
+++ b/app/src/main/res/layout/activity_free_tips.xml
@@ -21,5 +21,5 @@
         app:itemIconTint="@color/blue_for_buttons"
         android:fitsSystemWindows= "true"
         app:headerLayout= "@layout/nav_header_main"
-        app:menu= "@menu/activity_main_drawer" />
+        app:menu= "@menu/free_tips" />
 </androidx.drawerlayout.widget.DrawerLayout>
