--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorAppBar"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SubscribeActivity">
@@ -24,9 +26,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recycler"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center_vertical"
         android:layout_below="@+id/txt_premium"
+        android:background="@color/colorAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 
-</RelativeLayout>
+</LinearLayout>
