--- a/app/src/main/res/layout/free_tips_layout.xml
+++ b/app/src/main/res/layout/free_tips_layout.xml
@@ -1,22 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
     android:background="@color/black"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/title"
-        android:text="@string/latest_matches"
-        android:layout_marginStart="40dp"
-        android:layout_margin="12dp"
-        android:textColor="#F1EAEA"
-        android:textSize="15sp"
-        android:textAlignment="center"
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="2dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:gravity="center_horizontal" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/vip_image1"
+            android:src="@drawable/vip_fire"
+            android:visibility="gone"
+            android:layout_width="30dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"/>
+
+        <TextView
+            android:id="@+id/vip_textview"
+            android:text=""
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:layout_weight="1"
+            android:textColor="@color/green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
+
+        <ImageView
+            android:id="@+id/vip_image2"
+            android:src="@drawable/vip_fire"
+            android:visibility="gone"
+            android:layout_width="30dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +56,7 @@
             android:layout_height="40dp"/>
         <TextView
             android:id="@+id/error"
+            android:visibility="gone"
             android:textColor="@color/green"
             android:textAlignment="center"
             android:layout_marginTop="0dp"
@@ -41,13 +64,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_horizontal" />
-
     </LinearLayout>
+
+
 
 
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="3dp"
         android:layout_height="match_parent"/>
+
 </LinearLayout>
