--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
         android:adjustViewBounds="true"
         android:scaleType="fitStart"
-        app:srcCompat="@mipmap/profile_round" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:layout_width= "wrap_content"
