--- a/app/src/main/res/layout/product_adapter.xml
+++ b/app/src/main/res/layout/product_adapter.xml
@@ -3,19 +3,42 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card"
     android:theme="@style/Theme.MaterialComponents.Light"
-    android:layout_margin="8dp"
+    android:layout_margin="10dp"
+    android:layout_gravity="center"
     android:background="@color/profile_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:text="@string/available_subscriptions"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/vip_fire"
+            android:layout_width="30dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"/>
+
+        <TextView
+            android:text="@string/available_subscriptions"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
+
+        <ImageView
+            android:src="@drawable/vip_fire"
+            android:layout_width="30dp"
+            android:layout_weight="1"
+            android:layout_height="30dp"/>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -32,7 +55,8 @@
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/product_price"
@@ -44,19 +68,22 @@
             android:textAppearance="?attr/textAppearanceBody2"
             android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/product_description"
             android:text="Description"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textAlignment="center"
             android:textAppearance="?attr/textAppearanceBody2"
             android:textColor="@color/green"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:textAlignment="center"
@@ -66,7 +93,8 @@
             android:layout_marginBottom="5dp"
             android:text="Click here to proceed"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
 
     </LinearLayout>
 
