--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:id="@+id/top"
             android:orientation="vertical"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="100dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
@@ -56,18 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </com.google.android.material.textfield.TextInputLayout>
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:id="@+id/phone"
-                    android:hint="@string/phone_number"
-                    android:inputType="phone"
-                    android:background="#fff"
-                    android:gravity=""
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -100,7 +89,8 @@
                 android:text="@string/fill_all_fields"
                 android:layout_marginStart="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp" />
             <Button
                 android:id="@+id/button"
                 android:layout_margin="10dp"
