--- a/app/src/main/res/layout/free_tips_layout.xml
+++ b/app/src/main/res/layout/free_tips_layout.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/layout_vip"
         android:layout_width="match_parent"
-        android:layout_marginTop="2dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/vip_image1"
             android:src="@drawable/vip_fire"
-            android:visibility="gone"
             android:layout_width="30dp"
+            android:visibility="gone"
             android:layout_weight="1"
             android:layout_height="30dp"/>
 
         <TextView
             android:id="@+id/vip_textview"
-            android:text=""
             android:textAlignment="center"
+            android:visibility="gone"
             android:textStyle="bold"
             android:layout_weight="1"
             android:textColor="@color/green"
@@ -42,7 +42,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerInParent="true"
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
@@ -56,23 +56,21 @@
             android:layout_height="40dp"/>
         <TextView
             android:id="@+id/error"
-            android:visibility="gone"
             android:textColor="@color/green"
             android:textAlignment="center"
             android:layout_marginTop="0dp"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_horizontal" />
     </LinearLayout>
 
-
-
-
     <ListView
         android:id="@+id/listview"
+        android:layout_below="@+id/layout_vip"
         android:layout_width="match_parent"
         android:layout_marginBottom="3dp"
         android:layout_height="match_parent"/>
 
-</LinearLayout>
+</RelativeLayout>
