--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -84,12 +84,17 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:textColor="@color/colorLists"
-            android:layout_centerInParent="true"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:background="@drawable/sports_soccer"
-            android:textAlignment="center" />
+            android:id="@+id/vip_poster"
+            android:text="@string/join_vip_for_kshs_1500"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="20dp"
+            android:padding="10dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
     </RelativeLayout>
 
 </LinearLayout>
