--- a/app/src/main/res/layout/free_tips_layout.xml
+++ b/app/src/main/res/layout/free_tips_layout.xml
@@ -22,6 +22,7 @@
         <TextView
             android:id="@+id/vip_textview"
             android:textAlignment="center"
+            android:layout_marginTop="10dp"
             android:visibility="gone"
             android:textStyle="bold"
             android:layout_weight="1"
