--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,25 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/backgroundApp"
+    android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        android:background="@color/homeTabs"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
         <TextView
             android:id="@+id/home_message"
             android:textSize="17sp"
-            android:layout_margin="10dp"
-            android:padding="15dp"
-            android:textColor="@color/green"
-            android:background="@color/homeTabs"
-            android:layout_marginTop="50dp"
-            android:text="@string/welcome"
+            android:textStyle="bold"
+            android:text="@string/benefits_of_choosing_this_app"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:textSize="17sp"
+            android:textColor="@color/green"
+            android:text="@string/number_one_accurate_odds_predictor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:drawableLeftCompat="@drawable/won_status" />
+        <TextView
+            android:textSize="17sp"
+            android:textColor="@color/green"
+            android:text="@string/correct_odds"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:drawableLeftCompat="@drawable/won_status" />
+        <TextView
+            android:textSize="17sp"
+            android:textColor="@color/green"
+            android:text="@string/special_vip_package"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:drawableLeftCompat="@drawable/vip_fire" />
+        <TextView
+            android:textSize="17sp"
+            android:textColor="@color/green"
+            android:text="@string/daily_free_tips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:drawableLeftCompat="@drawable/won_status" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
@@ -52,6 +79,7 @@
                 android:layout_width="0dp"
                 android:text="36\nCorrect Tips"/>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -79,22 +107,35 @@
                 android:text="@string/_1200_nhappy_users"/>
         </LinearLayout>
     </LinearLayout>
-    <RelativeLayout
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:drawableLeftCompat="@drawable/vip_fire" />
+        <TextView
             android:id="@+id/vip_poster"
-            android:text="@string/join_vip_for_kshs_1500"
-            android:layout_margin="10dp"
+            android:text="@string/join_vip_for_15_to_get_more_sure_and_correct_tips"
             android:layout_marginBottom="20dp"
-            android:padding="10dp"
+            android:layout_weight="1"
+            android:textAlignment="center"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:gravity="center_horizontal" />
-    </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:drawableRightCompat="@drawable/vip_fire" />
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
