--- a/app/src/main/res/drawable/blue_button.xml
+++ b/app/src/main/res/drawable/blue_button.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#0E73C2"/>
+        android:color="#0E0E0E"/>
     <corners
         android:radius="20dp"/>
 </shape>
