--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageButton"
@@ -18,16 +17,19 @@
     <TextView
         android:layout_width= "wrap_content"
         android:layout_height= "wrap_content"
-        android:padding= "7dp"
         android:textSize="16sp"
+        android:layout_marginLeft="10dp"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="@string/app_name" />
+        android:textColor="#ffff"
+        android:text="@string/app_name"
+        android:layout_marginStart="10dp" />
     <TextView
         android:id= "@+id/textView"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="13sp"
+        android:layout_marginStart="10dp"
         android:layout_width= "wrap_content"
         android:layout_height= "wrap_content"
-        android:text= "@string/for_accurate_football_predictions" />
+        android:text= "@string/for_accurate_football_predictions"
+        android:layout_marginLeft="10dp" />
 </LinearLayout>
