--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -29,7 +29,7 @@
 
             <TextView
                 android:id="@+id/product_title"
-                android:text="Title"
+                android:text="Toptier VIP Special Package"
                 android:textColor="#E64A19"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -39,7 +39,7 @@
                 android:gravity="center_horizontal" />
             <TextView
                 android:id="@+id/product_price"
-                android:text="Kshs 1700"
+                android:text="$14"
                 android:textAlignment="center"
                 android:layout_marginTop="5dp"
                 android:layout_below="@id/product_title"
@@ -49,7 +49,7 @@
             <TextView
                 android:id="@+id/product_description"
                 android:textAlignment="center"
-                android:text="Football and Basket Ball tips"
+                android:text="Premium and Daily Football  tips"
                 android:layout_below="@id/product_price"
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
